# arc380_s26

./: .gitignore  Project_Description.md  README.md  README_CONSTRUCT_KINEMATICS.md  _inspect_ckpt.py  _verify_ckpt.py  realsense_Param1.json  scratch_marker.py  scratch_test.py
docker/: Dockerfile  cyclonedds.xml  docker-compose.yml  entrypoint.sh
scripts/: Demo_test.py  aruco_info.py  brick_pose_detection.py  camera.py  camera_calib.py  construct_using_validated.py  construct_using_validated_percept.py  construct_validated_perception.py  data_collection.py  demo_validation.py  knn_model.py  model_evaluation.py  model_evaluation_rich_feature.py  motion_planning_solution_group5.py  motion_planning_test_irene.py  optimization_grasping.py  perception.py  perception_simple.py  pose_conversion.py  publish_collision_boxes.py  runtime.py  scratch.txt  sequencer.py  sim_runtime.py  test_spawn.py  test_tf.py  training_demos.py  trajectory_planner.py  trajectory_planner_draft.py  trajectory_planner_draft_JG.py  udp_relay.py
scripts/examples/: egm_example.py  (+2 more)
snapshot_testing/: 0_Depth.raw  0_Depth_metadata.csv
src/abb_irb120_gazebo/: package.xml
src/abb_irb120_gazebo/abb_irb120_gazebo/: simulation_reset_node.py
src/abb_irb120_gazebo/config/: controllers.yaml
src/abb_irb120_gazebo/launch/: gz_moveit.launch.py
src/abb_irb120_gazebo/models/brick/: model.sdf
src/abb_irb120_gazebo/worlds/: validation_workcell.sdf
training_data/: training_SST.ipynb  training_SST_sequential.ipynb  training_SST_sequential2.ipynb  training_SST_z_refactoring.ipynb  training_plan.md
(+138 files in other folders)
